<resources>
    <string name="app_name">Evolution</string>

    <!-- Main -->
    <string name="evo.main.tab.shots">Shots</string>
    <string name="evo.main.tab.about">About</string>
    <string name="evo.main.tab.follows">Following</string>

    <string-array name="evo_main_tab_titles">
        <item>@string/evo.main.tab.shots</item>
        <item>@string/evo.main.tab.follows</item>
        <item>@string/evo.main.tab.about</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="more">More</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_in_error">Sign in error</string>
    <string name="profile">Profile</string>
    <string name="about_and_sign_out"><![CDATA[About & Sign out]]></string>
    <string name="account">Account</string>
    <string name="buckets">Buckets</string>
    <string name="about">About</string>
    <string name="sign_out">Sign out</string>
    <string name="empty_view">No datas received</string>
    <string name="can_not_load_data">Can not load data.</string>
    <string name="transition_shot">transition_shot</string>
    <string name="like_count">%s Likes</string>
    <string name="view_count">%s Views</string>
    <string name="no_comment">no comments</string>
    <string name="reply_hint">Add a comment</string>
    <string name="filter">Filter</string>
    <string name="followers">Followers</string>
    <string name="follow">Follow</string>
    <string name="unfollow">UnFollow</string>

</resources>
